--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,33 +6,34 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href='https://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-      <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <head>
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body class="main-white">
-  <!--navbar-dropdown--> 
-   <ul id="dropdown1" class="dropdown-content">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  </head>
+  <body class="main-white">
+    <!--navbar-dropdown--> 
+    <ul id="dropdown1" class="dropdown-content">
+      <li><%= link_to "My Account", current_member_t, class: 'main-green-text'%></li>
       <li><%= link_to "Log Out", destroy_member_t_session_path, :method => :delete, class: 'main-green-text'%></li>
+
     </ul>  
     <ul id="dropdown2" class="dropdown-content">
-      <li><%= link_to "Tutees", tutee_ts_path(), class: 'main-green-text'%></li>
+      <li><%= link_to "Tutee Profile", tutee_ts_path(), class: 'main-green-text'%></li>
       <li class="divider"></li>
       <li><%= link_to "Progress Reports", tpr_ts_path(), class: 'main-green-text'%></li>
     </ul>
-  
+
     <!--navbar-->
     <nav>
       <div class="nav-wrapper main-white">
-          <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
-            <li><%= image_tag("gabay-tbs-logo-white.png", height: '64', class: 'main-green')%></li>
-
+        <ul id="nav-mobile" class="hide-on-med-and-down open-sans">
+          <li><%= image_tag("gabay-tbs-logo-white.png", height: '64', class: 'main-green')%></li>
           <% if member_t_signed_in?%>
 
           <%if current_member_t.membership == "Administration"%> <!--ACCESSIBILITY IF ADMIN-->
@@ -41,50 +42,51 @@
             <li><a class="dropdown-button main-green-text nav-bar-text" href="#!" data-activates="dropdown2" data-beloworigin="true">&nbsp;Tutees</font><i class="material-icons right">arrow_drop_down</i></a></li>
             <li><%= link_to "Members", member_ts_path(), class: 'main-green-text nav-bar-text'%></li>
             <li><%= link_to "Worksheet", worksheet_ts_path, class: 'main-green-text nav-bar-text'%></li>  
-          </ul>
-          <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
-            
+        </ul>
+        <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
 
-            <%elsif current_member_t.membership == "Tutors"%> <!--ACCESSIBILITY IF TUTOR-->
-            <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
+
+          <%elsif current_member_t.membership == "Tutors"%> <!--ACCESSIBILITY IF TUTOR-->
+          <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
             <li><%= link_to "Modules", module_ts_path(), class: 'main-green-text nav-bar-text'%></li>
             <li><%= link_to "Evaluations", evaluation_ts_path(), class: 'main-green-text nav-bar-text'%></li>
             <li><a class="dropdown-button main-green-text nav-bar-text" href="#!" data-activates="dropdown2" data-beloworigin="true">&nbsp;Tutees</font><i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
           <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
 
-            <%elsif current_member_t.membership == "Data Analysis"%> <!--ACCESSIBILITY IF TUTOR-->
+            <%elsif current_member_t.membership == "Data Analysis"%> <!--ACCESSIBILITY IF DA-->
             <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
-             <li><%= link_to "Worksheet", worksheet_ts_path, class: 'main-green-text nav-bar-text'%></li>  
-          </ul>
-          <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
-
-            <%elsif current_member_t.membership == "Modules"%> <!--ACCESSIBILITY IF TUTOR-->
-            <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
-            <li><%= link_to "Modules", module_ts_path(), class: 'main-green-text nav-bar-text'%></li>
-            <li><%= link_to "Evaluations", evaluation_ts_path(), class: 'main-green-text nav-bar-text'%></li>
-            <!--<li><a class="dropdown-button main-green-text" href="#!" data-activates="dropdown2" data-beloworigin="true"><font size="4">&nbsp;Tutees</font><i class="material-icons right">arrow_drop_down</i></a></li>-->
-          </ul>
-          <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
-
-            <%end%> 
-
-            <li><a class="dropdown-button main-green-text nav-bar-text" href="#!" data-activates="dropdown1" data-beloworigin="true">Hello, <%= current_member_t.first_name%>!<i class="material-icons pull right">arrow_drop_down</i></a></li>
-          </ul>
-
-          <%else%>
-          <ul id="nav-mobile" class="left hide-on-med-and-down">
-              <li><a class="main-green-text crete-round"><font size="5">GABAY ERYA FORMATION PROGRAM INFORMATION SYSTEM (GEFPIS)</font></a></li>
+              <li><%= link_to "Worksheet", worksheet_ts_path, class: 'main-green-text nav-bar-text'%></li>  
             </ul>
-          <%end%>
-      </div>
-    </nav>
-    <div class="container">  
+            <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
 
-    </div>
+              <%elsif current_member_t.membership == "Modules"%> <!--ACCESSIBILITY IF MODULES-->
+              <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
+                <li><%= link_to "Modules", module_ts_path(), class: 'main-green-text nav-bar-text'%></li>
+                <li><%= link_to "Evaluations", evaluation_ts_path(), class: 'main-green-text nav-bar-text'%></li>
+                <!--<li><a class="dropdown-button main-green-text" href="#!" data-activates="dropdown2" data-beloworigin="true"><font size="4">&nbsp;Tutees</font><i class="material-icons right">arrow_drop_down</i></a></li>-->
+              </ul>
+              <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
 
-<%= yield %>
-</body>
+                <%end%> 
+
+                <li><a class="dropdown-button main-green-text nav-bar-text" href="#!" data-activates="dropdown1" data-beloworigin="true">Hello, <%= current_member_t.first_name%>!<i class="material-icons pull right">arrow_drop_down</i></a></li>
+              </ul>
+
+              <%else%>
+              <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li>
+                  <%= link_to "GABAY ERYA FORMATION PROGRAM INFORMATION SYSTEM (GEFPIS)", root_path, :style=>"color:#028d67 !important;font-size:25px;",class: 'crete-round' %></li>
+                </ul>
+                <%end%>
+              </div>
+            </nav>
+            <div class="container">  
+
+            </div>
+
+            <%= yield %>
+          </body>
 
 
-</html>
+          </html>
