--- a/app/views/member_ts/show.html.erb
+++ b/app/views/member_ts/show.html.erb
@@ -83,7 +83,9 @@
               </div>
             </div>      
           </div>
-          <%= link_to 'Back', member_ts_path, :class => 'waves-effect waves-light btn btn-main-green' %><br><br>
+          <%= link_to "Delete my account", registration_path(@member_t), data: { confirm: "Are you sure?" }, method: :delete, :class => 'waves-effect waves-light btn btn-main-green' %>
+          <%= link_to 'Back', member_ts_path, :class => 'waves-effect waves-light btn btn-main-green' %>
+          <br><br>
         </center>
         <br>
 
