--- a/app/views/module_ts/_form.html.erb
+++ b/app/views/module_ts/_form.html.erb
@@ -13,18 +13,18 @@
 
 
     <%= simple_form_for(@module_t) do |f| %>
-  <%= f.error_notification %>
     <div class="row">
         <div class="col s4 offset-s4">
             <div class="card open-sans main-white">
               <div class="card-content">
+               <%= f.error_notification %>
                 <div class="row">
                       <div class="col s12">
                         <form action="#">
                           <div class="file-field input-field">
                             <div class="btn">
                               <span>Browse</span>
-                               <%= f.input :file, as: :file,:label_html => { :class => 'chicken_label_name' } %>
+                               <%= f.input :file, as: :file,:label_html => { :class => 'chicken_label_name' }, required: true %>
                             </div>
                             <div class="file-path-wrapper">
                               <input class="file-path validate" type="text" placeholder="Upload one or more files">
@@ -33,11 +33,11 @@
                         </form>  
                       </div>
                       <div class="input-field col s12">
-                          <%= f.input :subject, collection: ['Math', 'English'] %>
+                          <%= f.input :subject, collection: ['Math', 'English'], required: true %>
 
                       </div>
                       <div class="input-field col s12">
-                              <%= f.input :topic %>
+                              <%= f.input :topic, required: true %>
                       </div>
                   </div>
                   <div class="row">
